--- a/index.html
+++ b/index.html
@@ -1,19 +1,42 @@
 <DOCTYPE html>
-<html>
+     <html>
 
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ALURA BOOKS</title>
-<link rel="styleheet" href="reset.css">
-<link rel="styleheet" href="style.css">
-</head>
+     <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>ALURA BOOKS</title>
+     <link rel="styleheet" href="reset.css">
+     <link rel="styleheet" href="style.css">
+     </head>
 
 <body>
     <header class="cabeçalho">
-        <span class="cabeçalho_menu-hamburguer"></span>
-    
-
-</body>
-
-</html>
+        <div class="container">
+             <input type="checkbox" id="menu" class="container_botao"
+             <label for="menu">
+                 <span class="cabeçalho_menu-hamburguer container_imagem"></span>
+             </label>
+             <ul class="lista-menu">
+ <li class="lista-menu_titulo">categorias</li>
+ <li class="lista-menu_item">                   
+     <a href="a" class="lista-menu_link">programaçâo</a>
+                 </li>
+                 <li class="lista-menu_item">
+                    <a href="a" class="lista-menu_link">front-end</a>
+                 </li>
+                 <a href="a" class="lista-menu_link">infraestrutura</a>
+                </li>
+                <li class="lista-menu_item">
+                   <a href="a" class="lista-menu_link">business</a>
+                </li>
+                <a href="a" class="lista-menu_link">design & ux</a>
+                 </li>
+            
+                   </ul>
+                       <img src="img/logo.svg.svg" alt="logo da Alurabook">
+                  </div>
+                  <div class="container">
+                       <a href="a"><img src="imf/favorito.svg" alt="meus favoritos" class="container_imagem"></a>
+                       <a href="a"><img src="img/compras.svg.svg" alt="carinhos de compras" class="container_imagem"></a>
+                       <a href="a"><img src="img/usuario.svg.svg" alt="meu prfil" class="container_imagem"></a>
+                  </div>
